src/main/java/src/br/com/professorisidro/isilanguage/parser/lib/IsiLangParser.java
// Generated from D:/ProjetoFinalCompiladores/src/main/java\IsiLang.g4 by ANTLR 4.9.1
package src.br.com.professorisidro.isilanguage.parser.lib;

	import src.br.com.professorisidro.isilanguage.datastructures.IsiSymbol;
	import src.br.com.professorisidro.isilanguage.datastructures.IsiVariable;
	import src.br.com.professorisidro.isilanguage.datastructures.IsiSymbolTable;
	import src.br.com.professorisidro.isilanguage.exceptions.IsiSemanticException;
	import src.br.com.professorisidro.isilanguage.ast.IsiProgram;
	import src.br.com.professorisidro.isilanguage.ast.AbstractCommand;
	import src.br.com.professorisidro.isilanguage.ast.CommandLeitura;
	import src.br.com.professorisidro.isilanguage.ast.CommandEscrita;
	import src.br.com.professorisidro.isilanguage.ast.CommandAtribuicao;
	import src.br.com.professorisidro.isilanguage.ast.CommandDecisao;
	import src.br.com.professorisidro.isilanguage.ast.CommandRepeticao;
	import src.br.com.professorisidro.isilanguage.ast.CommandDoWhile;
	import src.br.com.professorisidro.isilanguage.ast.CommandAdicionar;
	import src.br.com.professorisidro.isilanguage.ast.CommandObter;
	import src.br.com.professorisidro.isilanguage.ast.CommandAtribuirEObter;
	import src.br.com.professorisidro.isilanguage.ast.CommandTamanho;
	import src.br.com.professorisidro.isilanguage.ast.CommandPrintTamanho;


	import java.util.ArrayList;
	import java.util.Stack;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IsiLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, ABRE_PARENTESES=17, 
		FECHA_PARENTESES=18, PONTO_FINAL=19, OPERADORES=20, ATRIBUIR=21, ADICIONAR=22, 
		VIRGULA=23, ABRE_CHAVES=24, OBTER=25, FECHA_CHAVES=26, OPERADORES_RELACIONAIS=27, 
		NOME_VARIAVEL=28, TEXTO=29, NUMERO_REAL=30, INTEIRO=31, IGNORAR=32;
	public static final int
		RULE_inicio_e_fim_do_programa = 0, RULE_tamanho_lista = 1, RULE_declarar_variaveis = 2, 
		RULE_declara_variavel = 3, RULE_tipos_variaveis = 4, RULE_bloco = 5, RULE_comandos = 6, 
		RULE_obter = 7, RULE_leitura = 8, RULE_escrita = 9, RULE_atribuicao = 10, 
		RULE_condicional = 11, RULE_repeticao = 12, RULE_expressoes = 13, RULE_termo = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio_e_fim_do_programa", "tamanho_lista", "declarar_variaveis", "declara_variavel", 
			"tipos_variaveis", "bloco", "comandos", "obter", "leitura", "escrita", 
			"atribuicao", "condicional", "repeticao", "expressoes", "termo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'fimprog.'", "'tamanho'", "'int'", "'real'", "'texto'", 
			"'lista<int>'", "'lista<texto>'", "'lista<real>'", "'leia'", "'escreva'", 
			"'se'", "'entao'", "'senao'", "'enquanto'", "'fazer'", "'('", "')'", 
			"'.'", null, "':='", "'adc'", "','", "'{'", "'.obter'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "ABRE_PARENTESES", "FECHA_PARENTESES", 
			"PONTO_FINAL", "OPERADORES", "ATRIBUIR", "ADICIONAR", "VIRGULA", "ABRE_CHAVES", 
			"OBTER", "FECHA_CHAVES", "OPERADORES_RELACIONAIS", "NOME_VARIAVEL", "TEXTO", 
			"NUMERO_REAL", "INTEIRO", "IGNORAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IsiLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private int _tipo;
		private String _varName;
		private String _varValue;
		private IsiSymbolTable symbolTable = new IsiSymbolTable();
		private IsiSymbol symbol;
		private IsiProgram program = new IsiProgram();
		private ArrayList<AbstractCommand> curThread;
		private Stack<ArrayList<AbstractCommand>> stack = new Stack<ArrayList<AbstractCommand>>();
		private String _readID;
		private String _readIDLista;
		private String _writeID;
		private String _condLeft;
		private String _condRight;
		private String _exprID;
		private String _exprContent;
		private String _exprDecision;
		private ArrayList<AbstractCommand> listaTrue;
		private ArrayList<AbstractCommand> listaFalse;


		public void validarCondicao(String condLeft, String condRight, String expr){
	    		if (!symbolTable.validarCondicao(condLeft, condRight)){
	    			throw new IsiSemanticException("Conditional expression " + expr + " is invalid (wrong types).");
	    		}
	    	}

		public void verificaID(String id){
			if (!symbolTable.exists(id)){
				throw new IsiSemanticException("Symbol "+id+" not declared");
			}
		}

		public void verificaValorID(String id){
	    		if (!symbolTable.initialized(id)){
	    			throw new IsiSemanticException("Symbol "+id+" not initialized");
	    		}
	    	}

		public void setarInitialized(String id){
	        		symbolTable.get(id).setInitialized(true);
	        	}

	    public void verificaSeFoiUsada(IsiSymbol id){
	            if (!id.isUsed()){
	                System.out.println("\nWARNING: Variable "+id.getName()+" was daclared but is not being used");
	            }
	        }

	    public void setarUsada(String id){
	                symbolTable.get(id).setUsed(true);
	            }

	    public void verificaTipo(String id, String expr){
	              IsiVariable var = (IsiVariable)symbolTable.get(id);
	              if (!var.verificaTipo(expr, symbolTable)){
	                  throw new IsiSemanticException("variable "+ id +" is being assigned as the wrong type");
	              }
	          }

	    public void verificaTipoELista(String id, String idLista){
	                IsiVariable var = (IsiVariable)symbolTable.get(id);
	                IsiVariable varLista = (IsiVariable)symbolTable.get(idLista);
	                if (!var.verificaTipoELista(varLista)){
	                    throw new IsiSemanticException("variable "+ id +" is being assigned as the wrong type");
	                }
	            }

	   public void verificaTipoLista(String id, String expr){
	              IsiVariable var = (IsiVariable)symbolTable.get(id);
	              if (!var.verificaTipoLista(expr, symbolTable)){
	                  throw new IsiSemanticException("variable "+ id +" is being assigned as the wrong type");
	              }
	          }

	      public void verificarLista(String id){
	                 IsiVariable var = (IsiVariable)symbolTable.get(id);
	                 if (var.getType() != 3 && var.getType() != 4 && var.getType() != 5){
	                     throw new IsiSemanticException("variable "+ id +" is not a list");
	                 }
	             }

		public void exibeComandos(){
			for (AbstractCommand c: program.getComandos()){
				System.out.println(c);
			}
		}
		
		public void generateCode(){
			program.generateTarget();
		}

	public IsiLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Inicio_e_fim_do_programaContext extends ParserRuleContext {
		public Declarar_variaveisContext declarar_variaveis() {
			return getRuleContext(Declarar_variaveisContext.class,0);
		}
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public Inicio_e_fim_do_programaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio_e_fim_do_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterInicio_e_fim_do_programa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitInicio_e_fim_do_programa(this);
		}
	}

	public final Inicio_e_fim_do_programaContext inicio_e_fim_do_programa() throws RecognitionException {
		Inicio_e_fim_do_programaContext _localctx = new Inicio_e_fim_do_programaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio_e_fim_do_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(T__0);
			setState(31);
			declarar_variaveis();
			setState(32);
			bloco();
			setState(33);
			match(T__1);
			  program.setVarTable(symbolTable);
			           	  program.setComandos(stack.pop());
			              for(IsiSymbol var : symbolTable.getAll()){
			                    verificaSeFoiUsada(var);
			              }
			           
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tamanho_listaContext extends ParserRuleContext {
		public TerminalNode ABRE_PARENTESES() { return getToken(IsiLangParser.ABRE_PARENTESES, 0); }
		public TerminalNode NOME_VARIAVEL() { return getToken(IsiLangParser.NOME_VARIAVEL, 0); }
		public TerminalNode FECHA_PARENTESES() { return getToken(IsiLangParser.FECHA_PARENTESES, 0); }
		public TerminalNode PONTO_FINAL() { return getToken(IsiLangParser.PONTO_FINAL, 0); }
		public Tamanho_listaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tamanho_lista; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterTamanho_lista(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitTamanho_lista(this);
		}
	}

	public final Tamanho_listaContext tamanho_lista() throws RecognitionException {
		Tamanho_listaContext _localctx = new Tamanho_listaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tamanho_lista);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(T__2);
			setState(37);
			match(ABRE_PARENTESES);
			setState(38);
			match(NOME_VARIAVEL);
			_readID = _input.LT(-1).getText(); verificarLista(_readID);verificaID(_readID); verificaValorID(_readID);
			setState(40);
			match(FECHA_PARENTESES);
			setState(41);
			match(PONTO_FINAL);

			                     CommandTamanho cmd = new CommandTamanho(_readID);
			                     stack.peek().add(cmd);
			                     
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declarar_variaveisContext extends ParserRuleContext {
		public List<Declara_variavelContext> declara_variavel() {
			return getRuleContexts(Declara_variavelContext.class);
		}
		public Declara_variavelContext declara_variavel(int i) {
			return getRuleContext(Declara_variavelContext.class,i);
		}
		public Declarar_variaveisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar_variaveis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterDeclarar_variaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitDeclarar_variaveis(this);
		}
	}

	public final Declarar_variaveisContext declarar_variaveis() throws RecognitionException {
		Declarar_variaveisContext _localctx = new Declarar_variaveisContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarar_variaveis);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(44);
				declara_variavel();
				}
				}
				setState(47); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declara_variavelContext extends ParserRuleContext {
		public Tipos_variaveisContext tipos_variaveis() {
			return getRuleContext(Tipos_variaveisContext.class,0);
		}
		public List<TerminalNode> NOME_VARIAVEL() { return getTokens(IsiLangParser.NOME_VARIAVEL); }
		public TerminalNode NOME_VARIAVEL(int i) {
			return getToken(IsiLangParser.NOME_VARIAVEL, i);
		}
		public TerminalNode PONTO_FINAL() { return getToken(IsiLangParser.PONTO_FINAL, 0); }
		public List<TerminalNode> VIRGULA() { return getTokens(IsiLangParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(IsiLangParser.VIRGULA, i);
		}
		public Declara_variavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declara_variavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterDeclara_variavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitDeclara_variavel(this);
		}
	}

	public final Declara_variavelContext declara_variavel() throws RecognitionException {
		Declara_variavelContext _localctx = new Declara_variavelContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declara_variavel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			tipos_variaveis();
			setState(50);
			match(NOME_VARIAVEL);

				                  _varName = _input.LT(-1).getText();
				                  _varValue = null;
				                  symbol = new IsiVariable(_varName, _tipo, _varValue);
				                  if (!symbolTable.exists(_varName)){
				                     symbolTable.add(symbol);	
				                  }
				                  else{
				                  	 throw new IsiSemanticException("Symbol "+_varName+" already declared");
				                  }
			                    
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(52);
				match(VIRGULA);
				setState(53);
				match(NOME_VARIAVEL);

					                  _varName = _input.LT(-1).getText();
					                  _varValue = null;
					                  symbol = new IsiVariable(_varName, _tipo, _varValue);
					                  if (!symbolTable.exists(_varName)){
					                     symbolTable.add(symbol);	
					                  }
					                  else{
					                  	 throw new IsiSemanticException("Symbol "+_varName+" already declared");
					                  }
				                    
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(PONTO_FINAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipos_variaveisContext extends ParserRuleContext {
		public Tipos_variaveisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipos_variaveis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterTipos_variaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitTipos_variaveis(this);
		}
	}
